-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

12/10/13
    - New MATPOWER options implementation based on options struct
      instead of options vector.
      INCOMPATIBLE CHANGE: In results struct returned by an OPF, the
      value of results.raw.output.alg is now a string, not an old-style
      numeric alg code.
    - Gurobi now takes precendence over MOSEK when default solver
      is selected for DC OPFs or qps_matpower().

12/4/13
    - Corrected error in Figure 6-5 "Total Cost Function for Negative
      Injection" in Dispatchable Loads section of User's Manual
      (slopes were labeled incorrectly).

11/15/13
    - Added case_info().
    - Modified connected_components() to sort returned groups by
      decreasing cardinality.

11/5/13
    - Fixed a bug in MIPS where a near-singular matrix could produce
      an extremely large Newton step, resulting in incorrectly satisfying
      the relative feasibility criterion for successful termination.
    - Improved the starting point created for Ipopt, Knitro and MIPS by
      dcopf_solver(), ipoptopf_solver(), ktropf_solver and mipsopf_solver()
      for variables that are only bounded on one side.

10/11/13
    - Removed support for Matlab 6.x. Removed 'anon_fcns' option from
      have_fcn(). Files removed:
        fmincopf6_solver.m
        mips6.m
        mips6opf_solver.m
        qps_mips6.m
        t_mips6.m
    - Removed support for constr and successive LP-based OPF solvers.
      Removed 'constr', 'lp', 'qp' options from have_fcn(). Files removed:
        copf_solver.m
        fun_copf.m
        grad_copf.m
        LPconstr.m
        LPeqslvr.m
        lpopf_solver.m
        LPrelax.m
        LPsetup.m