@@ -15,6 +15,9 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+1/3/14
+    - Added persistent variable to improve performance of have_fcn().
+
 12/10/13
     - New MATPOWER options implementation based on options struct
       instead of options vector.
